--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,17 +1,15 @@
 - title "Pages"
 
-%table
+%table.pretty
   %tr
-    %th Name
-    %th Permalink
-    %th Content
+    %th= sortable 'name'
+    %th= sortable 'permalink'
+    %th= sortable 'content'
+    %th{:colspan => "2"}= link_to image_tag('add.png'), new_page_path, :title => 'Create'
   - for page in @pages
     %tr
-      %td= page.name
+      %td= link_to page.name, page.permalink, :title => 'View'
       %td= page.permalink
       %td= page.content
-      %td= link_to 'Show', page
-      %td= link_to 'Edit', edit_page_path(page)
-      %td= link_to 'Destroy', page, :confirm => 'Are you sure?', :method => :delete
-
-%p= link_to "New Page", new_page_path
+      %td= link_to image_tag('edit.png'), edit_page_path(page), :title => 'Edit'
+      %td= link_to image_tag('delete.png'), page, :confirm => 'Are you sure?', :method => :delete, :title => 'Delete'
