--- a/app/views/pages/index.js.erb
+++ b/app/views/pages/index.js.erb
@@ -1,1 +1,2 @@
-$('#pages').html('<%= escape_javascript(render('pages')) %>')
+$('#pages').html('<%= escape_javascript(render('pages')) %>');
+document.title = "<%= escape_javascript("#{params[:search].to_s.titleize} Pages by #{(params[:sort] || 'name').titleize} - Page #{params[:page] || 1}") %>";
