* Fixed bug in history API where extra request was sent on every page load * Made views and javascript more generic in preparation for writing custom generators

--- a/app/views/pages/_pages.html.haml
+++ b/app/views/pages/_pages.html.haml
@@ -15,6 +15,6 @@
       %td= link_to image_tag('edit.png'), edit_page_path(page), :title => 'Edit'
       %td= link_to image_tag('delete.png'), page, :confirm => 'Are you sure?', :method => :delete, :title => 'Delete'
       
-%p= will_paginate @pages
+%p= will_paginate @pages, :class => 'pageable'
 
 %p= page_entries_info @pages
