Improved my:scaffold

--- a/app/stylesheets/application.scss
+++ b/app/stylesheets/application.scss
@@ -56,18 +56,27 @@ a {
   p { margin: 8px 10px; }
   ul { margin: 0; }
 }
-    
-table.pretty {
-  border-collapse: collapse;
-  td,
-  th {
-    padding: 4px 10px;
-    border: solid 1px #AAA; }
-  th {
-    .current {
-      padding-right: 16px;
-      background: { repeat: no-repeat; position: right center } }
-    .asc { background-image: url(/images/up.png); }
-    .desc { background-image: url(/images/down.png); }
+
+.table_container {
+  overflow: auto;
+  .pretty {
+    width: 100px;
+    overflow-x: scroll;
+    border-collapse: collapse;
+    td,
+    th {
+      padding: 4px 10px;
+      border: solid 1px #AAA; }
+    th {
+      .current {
+        padding-right: 16px;
+        background: { repeat: no-repeat; position: right center } }
+      .asc { background-image: url(/images/up.png); }
+      .desc { background-image: url(/images/down.png); }
+    }
   }  
+}
+
+#search {
+  margin: 0;
 }
