--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -60,17 +60,24 @@ a {
   .error_messages ul {
     margin: 0; }
 
-table.pretty {
-  border-collapse: collapse; }
-  table.pretty td,
-  table.pretty th {
-    padding: 4px 10px;
-    border: solid 1px #AAA; }
-  table.pretty th .current {
-    padding-right: 16px;
-    background-repeat: no-repeat;
-    background-position: right center; }
-  table.pretty th .asc {
-    background-image: url(/images/up.png); }
-  table.pretty th .desc {
-    background-image: url(/images/down.png); }
+.table_container {
+  overflow: auto; }
+  .table_container .pretty {
+    width: 100px;
+    overflow-x: scroll;
+    border-collapse: collapse; }
+    .table_container .pretty td,
+    .table_container .pretty th {
+      padding: 4px 10px;
+      border: solid 1px #AAA; }
+    .table_container .pretty th .current {
+      padding-right: 16px;
+      background-repeat: no-repeat;
+      background-position: right center; }
+    .table_container .pretty th .asc {
+      background-image: url(/images/up.png); }
+    .table_container .pretty th .desc {
+      background-image: url(/images/down.png); }
+
+#search {
+  margin: 0; }
